tests/invalid/syntax/for_missing_in.fig
// INVALID: for loop missing in keyword
// Expected parse error: 'in' required in for statement
func bad(data: [i32]) -> ok
    for item data
        pass
